--- a/configs/base_config.yaml
+++ b/configs/base_config.yaml
@@ -10,7 +10,7 @@ logic:
   grammar: '$ALFWORLD_DATA/logic/alfred.twl2'                  # Grammar file that defines the text feedbacks
 
 env:
-  type: 'AlfredTWEnv'                                          # 'AlfredTWEnv' or 'AlfredThorEnv' or 'AlfredHybrid'
+  type: 'AlfredThorEnv'                                          # 'AlfredTWEnv' or 'AlfredThorEnv' or 'AlfredHybrid'
   regen_game_files: False                                      # check if game is solvable by expert and save to game.tw-pddl file
   domain_randomization: False                                  # shuffle Textworld print order and object id nums
   task_types: [1, 2, 3, 4, 5, 6]                               # task-type ids: 1 - Pick & Place, 2 - Examine in Light, 3 - Clean & Place, 4 - Heat & Place, 5 - Cool & Place, 6 - Pick Two & Place
@@ -27,8 +27,8 @@ env:
     screen_width: 300                                          # width of THOR window
     screen_height: 300                                         # height of THOR window
     smooth_nav: False                                          # smooth rotations, looks, and translations during navigation (very slow)
-    save_frames_to_disk: False                                 # save frame PNGs to disk (useful for making videos)
-    save_frames_path: './videos/'                              # path to save frame PNGs
+    save_frames_to_disk: True                               # save frame PNGs to disk (useful for making videos)
+    save_frames_path: '/home/yijunyan/Data/PyCode/alfworld-v2/data/videos/'                              # path to save frame PNGs
 
 controller:
   type: 'oracle'                                               # 'oracle' or 'oracle_astar' or 'mrcnn' or 'mrcnn_astar' (aka BUTLER)
